# pgm-image-processing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ReadMe.txt  cmake_install.cmake
src/: p1.c  p2.c  p3.c  p4.c  pgm.c  pgm.h
